--- a/resources/message.yml
+++ b/resources/message.yml
@@ -1,188 +1,105 @@
-###               ____                    _
-#  ____ _____  __/ ___\_   _  __ _ _ ____| |
-# / __// _ \ \/ / /  _| | | |/ _' | '_/ _' |
-# \__ \  __/>  <\ \_| | |_| | (_) | || (_) |
-# /___/\___/_/\_\\____/\___/ \__,_|_| \__,_|
+### ____ _
+# ____ _____ __ / ___ \ _ _ __ _ _ ____ | | |
+# / __ // _ \ \ / / / _ | | | | | | / _ '| '_ / _' |
+# \ __ \ __ /> <\ \ _ | | | | _ | | | | (_) | || (_) |
+# / ___ / \ ___ / _ / \ _ \\ ____ / \ ___ / \ __, _ | _ | \ __, _ |
 #
-#            MAIN LANGUAGE FILE
+# MAIN LANGUAGE FILE
 ###
-# Оставьте строку пустой, и сообщение не отправится.
+# Leave the string blank and the message will not be sent.
 ###
-# ОБЩИЕ СООБЩЕНИЯ ОБ ОШИБКАХ:
-#   no_console: отправка команды из консоли
-#   no_permission: недостаточно прав для отправки команды
-no_console: "§l§c- §fGUARD §c- Консоль сосет§r"
-no_permission: "§l§c- §fGUARD §c- Недостаточно прав$r"
+# GENERAL ERROR MESSAGES:
+# no_console: sending a command from the console
+# no_permission: not enough rights to send a team
+no_console: "§§§- §fGUARD §c- Console sucks§r"
+no_permission: "§l§c- §fGUARD §c- Insufficient rights $ r"
 ###
-#   player_not_exist: указанный игрок не найден
-#   player_not_owner: требуются права создателя региона
-#   player_already_owner: игрок уже владеет данным регионом
-#   player_buy_rg: игрок купил регион
-#   player_have_not_money: недостаточно средств для покупки
-player_not_exist: "§l§c- §fGUARD §c- Указанный игрок не найден§r"
-player_not_owner: "§l§c- §fGUARD §c- Вы не владеете данным регионом§r"
-player_already_owner: "§l§c- §fGUARD §c- Вы уже владеете данным регионом§r"
+# player_not_exist: specified player not found
+# player_not_owner: requires the rights of the creator of the region
+# player_already_owner: player already owns this region
+# player_buy_rg: player bought a region
+# player_have_not_money: not enough money to buy
+player_not_exist: "§l§c- §fGUARD §c- Specified player not found§r"
+player_not_owner: "§l§c- §fGUARD §c- You do not own this region§r"
+player_already_owner: "§l§c- §fGUARD §c- You already own this region§r"
 #
-# {region} - регион
-player_buy_rg: "§l§a- §fGUARD §a- Вы приобрели регион {region}§r"
+# {region} - region
+player_buy_rg: "§l§a- §fGUARD §a- You have acquired the region {region} §r"
 #
-# {price} - цена региона
-player_have_not_money: "§l§c- §fGUARD §c- Требуется {price} монет для покупки§r"
+# {price} - the price of the region
+player_have_not_money: "§l§c- §fGUARD §c- Requires {price} coins to purchase§r"
 ###
-#   rg_exist: указанный регион принадлежит другому игроку
-#   rg_not_exist: указанный регион еще не создан
-#   rg_oversize: регион слишком большой
-#   rg_override: регион пересекает чужой
-#   rg_overcount: превышено количество регионов на игрока
-#   rg_help: меню помощи по командам
-rg_exist: "§l§c- §fGUARD §c- Указанный регион уже существует§r"
-rg_not_exist: "§l§c- §fGUARD §c- Регион не найден§r"
+# rg_exist: the specified region belongs to another player
+# rg_not_exist: The specified region has not been created yet
+# rg_oversize: region too large
+# rg_override: the region crosses the stranger
+# rg_overcount: number of regions per player exceeded
+# rg_help: help menu for commands
+rg_exist: "§l§c- §fGUARD §c- The specified region already exists§r"
+rg_not_exist: "§l§c- §fGUARD §c- Region not found§r"
 #
-# {max_count} - максимальный размер региона
-rg_oversize: "§l§c- §fGUARD §c- Максимальный размер: {max_size} блоков§r"
-rg_override: "§l§c- §fGUARD §c- Позиция пересекает чужой регион§r"
+# {max_count} - maximum size of the region
+rg_oversize: "§l§c- §fGUARD §c- Maximum size: {max_size} blocks§r"
+rg_override: "§l§c- §fGUARD §c- The position crosses a foreign region§r"
 #
-# {max_count} - максимальное количество регионов
-rg_overcount: "§l§c- §fGUARD §c- Максимальное количество регионов: {max_count}§r"
-rg_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg wand §7- §fтопор для выделения§r\n§l§e• §f/rg pos §7- §fустановка позиций§r\n§l§e• §f/rg create §7- §fсоздание региона§r\n§l§e• §f/rg member §7- §fуправление участниками§r\n§l§e• §f/rg owner §7- §fпередача владения§r\n§l§e• §f/rg flag §7- §fуправление флагами§r\n§l§e• §f/rg list §7- §fсписок регионов во владении§r\n§l§e• §f/rg remove §7- §fудаление региона§r\n§l§o§e__________________________§r"
+# {max_count} - maximum number of regions
+rg_overcount: "§l§c- §fGUARD §c- Maximum number of regions: {max_count} §r"
+rg_help: "§logo --------- §fH ELP §e --------- §r \ n§l§e • §f / rg wand §7- § ftop for selection§r \ n§l§e • §f / rg pos §7- § setting the positions§r \ n§l§e • §f / rg create §7- §f creating the region§r \ n§l§ e • §f / rg member §7- §function of participants§r \ n§l§e • §f / rg owner §7- §f transfer of ownership§r \ n§l§e • §f / rg flag §7- §function of the flags§r \ n§l§e • §f / rg list §7- §f list of regions in possession§r \ n§l§e • §f / rg remove §7- §delete region§r \ n§ l§o§ __________________________ §r "
 
 
 ###
-# СООБЩЕНИЯ ПРИ ВВОДЕ КОМАНД:
-# 1. /rg create <регион>
+# COMMUNICATION MESSAGES:
+# 1. / rg create <region>
 ###
-#   create_help: помощь по команде
-#   short_name: короткое название
-#   long_name: длинное название
-#   bad_name: плохое название
-#   rg_create: регион успешно создан
-create_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg create <регион> §7- §fсоздать регион§r\n§l§e• §f/rg claim <регион> §7- §fсоздать регион§r\n§l§e• §fДля создания региона требуется§r\n§l§e• §fВыделить его позицию ( диагональ куба )§r\n§l§e• §fПодробнее: /rg pos§r\n§l§o§e__________________________§r"
-short_name: "§l§c- §fGUARD §c- Название региона слишком короткое§r"
-long_name: "§l§c- §fGUARD §c- Название региона слишком длинное§r"
-bad_name: "§l§c- §fGUARD §c- Разрешены только латинские буквы и цифры§r"
+# create_help: help with the command
+# short_name: short title
+# long_name: long title
+# bad_name: bad name
+# rg_create: region successfully created
+create_help: "§l§o§e --------- §fH ELP §e --------- §r \ n§l§e • §f / rg create <region> § 7- §f create a region§r \ n§l§e • §f / rg claim <region> §7- §f create a region§r \ n§l§e • §fTo create a region, you need§r \ n§l§e • §Find its position (cube diagonal) §r \ n§l§e • §fRead more: / rg pos§r \ n§l§o§e __________________________ §r "
+short_name: "§l§c- §fGUARD §c- Region name too short§r"
+long_name: "§l§c- §fGUARD §c- Region name too long§r"
+bad_name: "§l§c- §fGUARD §c- Only Latin letters and numbers§r are allowed"
 #
-# {region} - имя региона при создании
-rg_create: "§l§a- §fGUARD §a- Регион {region} успешно создан§r"
+# {region} - name of the region when creating
+rg_create: "§lga- §fGUARD §a- Region {region} successfully created§r"
 ###
-# 2. /rg flag <регион> <флаг>
+# 2. / rg flag <region> <flag>
 ###
-#   flag_help: помощь по команде
-#   flag_on: флаг включен
-#   flag_off: флаг выключен
-#   flag_not_exist: указанный флаг не существует
+# flag_help: help with the command
+# flag_on: flag included
+# flag_off: flag turned off
+# flag_not_exist: the specified flag does not exist
 #
-# {flag_list} - список всех доступных флагов
-flag_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg flag <регион> <флаг> §7- §fизменить флаг§r\n§l§e• §fФлаги служат для запрета или разрешения§r\n§l§e• §fОпределенных действий внутри региона§r\n§l§e• §fДоступные флаги: {flag_list}§r\n§l§o§e__________________________§r"
-flag_not_exist: "§l§c- §fGUARD §c- Указанный флаг не существует§r"
+# {flag_list} - a list of all available flags
+flag_help: "§l§o§e --------- §fH ELP §e --------- §r \ n§l§e • §f / rg flag <region> < flag> §7- §fchange the flag§r \ n§l§e • §f Flags serve to prohibit or resolve§r \ n§l§e • §fSpecific actions within the region§r \ n§l§e • §fAccessible flags : {flag_list} §r \ n§l§o§e __________________________ §r "
+flag_not_exist: "§l§c- §fGUARD §c- The specified flag does not exist§r"
 #
-# {flag} - включенный флаг
-flag_on: "§l§a- §fGUARD §a- Флаг {flag} включен§r"
+# {flag} - flag included
+flag_on: "§l§a- §fGUARD §a- The flag {flag} is included§r"
 #
-# {flag} - выключенный флаг
-flag_off: "§l§c- §fGUARD §c- Флаг {flag} выключен§r"
+# {flag} - flag turned off
+flag_off: "§l§c- §fGUARD §c- The flag {flag} is off§r"
 ###
-# 3. /rg list
+# 3. / rg list
 ###
-#   list_empty: регионов не найдено
-#   list_success: список регионов
-list_empty: "§l§c- §fGUARD §c- У вас нет ни одного региона§r"
+# list_empty: no regions found
+#list_success: list of regions
+list_empty: "§l§c- §fGUARD §c- You do not have any regions§r"
 #
-# {list} - список регионов
-list_success: "§l§a- §fGUARD §a- Список ваших регионов: {list}§r"
+# {list} - list of regions
+list_success: "§l§a- §fGUARD §a- List of your regions: {list} §r"
 ###
-# 4. /rg member [add,remove] <регион> <игрок>
+# 4. / rg member [add, remove] <region> <player>
 ###
-#   member_help: помощь по команде
-#   member_add: игрок добавлен в регион
-#   member_remove: игрок исключен из региона
-#   player_already_member: игрок уже состоит в регионе
-member_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg member [add,remove] <регион> <игрок> §7- §fуправление участниками§r\n§l§e• §fУчастники могут изменять ваш регион§r\n§l§e• §fНо не смогут продать или удалить его§r\n§l§e• §fБудьте осторожны при выборе участников§r\n§l§o§e__________________________§r"
+# member_help: help with the command
+# member_add: player added to region
+# member_remove: Player removed from region
+# player_already_member: the player is already in the region
+member_help: "§l§o§e --------- §fH ELP §e --------- §r \ n§l§e • §f / rg member [add, remove ] <region> <player> §7- §fanagement of participants§r \ n§l§e • §f Members can change your region§r \ n§l§e • §fHow can not sell or delete it§r \ n§ l§e • §fBe careful when choosing participants§r \ n§l§o§e __________________________ §r "
 #
-# {player} - добавленный игрок
-member_add: "§l§a- §fGUARD §a- Игрок {player} добавлен в регион§r"
+# {player} - added player
+member_add: "§l§a- §fGUARD §a- Player {player} added to region§r"
 #
-# {player} - исключенный игрок
-member_remove: "§l§c- §fGUARD §c- Игрок {player} исключен из региона§r"
-player_already_member: "§l§c- §fGUARD §c- Игрок уже участник региона§r"
-###
-# 5. /rg owner <регион> <игрок>
-###
-#   owner_help: помощь по команде
-#   owner_change: владелец региона изменен
-owner_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg owner <регион> <игрок> §7- §fназначить владельца§r\n§l§e• §fВ целях безопасности количество владельцев§r\n§l§e• §fНа регион не может превышать 1 игрока§r\n§l§e• §fПри выборе нового владельца вы станете участником§r\n§l§o§e__________________________§r"
-#
-# {player} - новый владелец региона
-owner_change: "§l§a- §fGUARD §a- {player} теперь владеет регионом§r"
-###
-# 6. /rg pos [1,2]
-###
-#   pos_help: помощь по команде
-#   pos_1_set: позиция 1 установлена
-#   pos_2_set: позиция 2 установлена
-#   pos_another_world: позиции в разных мирах
-pos_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg pos [1,2] §7- §fустановить позицию§r\n§l§e• §f/rg pos1 §7- §fустановить позицию 1§r\n§l§e• §f/rg pos2 §7- §fустановить позицию 2§r\n§l§e• §fТочки должны распологать на противоположных§r\n§l§e• §fУглах кубоида, проводя диагональ§r\n§l§e• §fПосле установки точек вы сможете создать свой регион§r\n§l§o§e__________________________§r"
-pos_1_set: "§l§a- §fGUARD §a- Позиция 1 установлена. Установите позицию 2§r"
-pos_2_set: "§l§a- §fGUARD §a- позиция 2 установлена§r"
-pos_another_world: "§l§c- §fGUARD §c- Позиции находятся в разных мирах§r"
-###
-# 7. /rg remove <регион>
-###
-#   remove_help: помощь по команде
-#   rg_remove: регион удален
-remove_help: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §f/rg remove <регион> §7- §fудалить регион§r\n§l§e• §fПосле удаления региона все участники§r\n§l§e• §fПотеряют свой статус участника§r\n§l§o§e__________________________§r"
-rg_remove: "§l§a- §fGUARD §a- Регион удален§r"
-###
-# 8. /rg wand
-###
-#   got_wand: топорик для выделения позиций
-#   inventory_oversize: инвентарь переполнен
-got_wand: "§l§o§e--------- §fH E L P §e---------§r\n§l§e• §fВы получили топор для привата§r\n§l§e• §fДля установки позиции достаточно§r\n§l§e• §fНажать топором по нужному блоку§r\n§l§o§e__________________________§r"
-inventory_oversize: "§l§c- §fGUARD §c- Инвентарь переполнен§r"
-
-
-###
-# ИНФОРМАЦИЯ О РЕГИОНЕ:
-# {region} - название региона
-# {owner} - владелец региона
-# {member} - участники региона
-rg_info: "§l§e- §fРЕГИОН §e- {region} | §e- §fВЛАДЕЛЕЦ §e- {owner}§r\n§l§e- §fУЧАСТНИКИ §e- {member}"
-
-###
-# ТЕКСТ ТАБЛИЧКИ ПРОДАЖИ:
-# {region} - название региона
-# {price} - цена
-sell_text_1: "§l§eПродается регион:§r"
-sell_text_2: "§f{region}"
-sell_text_3: "§l§eЦена:§r"
-sell_text_4: "§f{price}"
-
-sell_exist: "§l§c- §fGUARD §c- Табличка продажи для этого региона уже установлена§r"
-
-###
-# СООБЩЕНИЯ О ЗАПРЕТЕ ДЕЙСТВИЙ:
-#   warn_flag_interact: запрещено нажимать на что-либо
-#   warn_flag_teleport: запрещено телепортироваться
-#   warn_flag_bucket: запрещено использовать ведра
-#   warn_flag_damage: урон от внешнего мира не получен
-#   warn_flag_chest: запрещено открывать сундуки
-#   warn_flag_place: запрещено ставить блоки
-#   warn_flag_break: запрещено ломать блоки
-#   warn_flag_sleep: запрещено ложиться в кровать
-#   warn_flag_drop: запрещено выбрасывать вещи
-#   warn_flag_chat: запрещено отправлять сообщения в чат
-#   warn_flag_pvp: запрещено драться с игроками
-#   warn_flag_mob: запрещено драться с мобами
-#   warn_safe_mode: запрещено изменять мир
-warn_flag_interact: ""
-warn_flag_teleport: "§l§c- §fGUARD §c- Телепортация в данном регионе ограничена§r"
-warn_flag_bucket: "§l§c- §fGUARD §c- Использование ведер в данном регионе ограничено§r"
-warn_flag_damage: ""
-warn_flag_chest: "§l§c- §fGUARD §c- Использование сундуков в данном регионе ограничено§r"
-warn_flag_place: "§l§c- §fGUARD §c- Строительство в данном регионе ограничено§r"
-warn_flag_break: "§l§c- §fGUARD §c- Строительство в данном регионе ограничено§r"
-warn_flag_sleep: "§l§c- §fGUARD §c- Использование кроватей в данном регионе ограничено§r"
-warn_flag_drop: "§l§c- §fGUARD §c- Выбрасывание вещей в данном регионе ограничено§r"
-warn_flag_chat: "§l§c- §fGUARD §c- Отправка сообщений в этом регионе ограничена§r"
-warn_flag_pvp: "§l§c- §fGUARD §c- Пвп в данном регионе ограничено§r"
-warn_flag_mob: "§l§c- §fGUARD §c- Урон мобам в данном регионе выключен§r"
-warn_safe_mode: "§l§c- §fGUARD §c- Изменение мира вне регионов запрещено§r"
+# {player} is the excluded player
+member_remove: "§l§c- §fGUARD §c- Player {player} is excluded from the
